# portfolio-fit

./: .gitignore  CHANGELOG.md  CLONE_QUICK_START.md  ENHANCED_USAGE_GUIDE.md  LICENSE  README.md  calibrate_scoring_model.py  clone_all_repos.py  enhanced_evaluate_portfolio.py  evaluate_portfolio.bat  generate_portfolio_schema.py  job_fit_analysis.py  prepare_golden_set.py  pyproject.toml  recalibrate_profile.py  run_job_fit_benchmark.py  tune_scoring_config.py  validate_evaluation_contract.py
.github/workflows/: ci.yml
calibration/: golden_set_template.csv  jd_sample_backend_ai.txt
calibration/jd_benchmark/: backend_fastapi_ai.txt  data_engineer_mlops.txt  devops_platform.txt  django_fintech.txt  telegram_product_engineer.txt
docs/: calibration-applicability-limits.md  migration-v2_3-to-v3_0.md  migration-v3_0-to-v3_1.md  recalibration-profiles.md
docs/adr/: 0001-evidence-classification.md
docs/baselines/: v2.3-baseline-freeze.md
docs/quality/: definition-of-done.md
docs/releases/: v3.0.0-publish-checklist.md  v3.0.0-release-notes.md  v3.1.0-publish-checklist.md  v3.1.0-release-notes.md
portfolio_fit/: __init__.py  calibration.py  cli.py  discovery.py  github_fetcher.py  job_fit.py  job_fit_benchmark.py  recalibration.py  reporting.py  schema_contract.py  scoring.py  scoring_config.json  tuning.py
schemas/: README.md  portfolio_evaluation.schema.json
tests/: ci_smoke_stack_profiles.py  test_calibration.py  test_github_fetcher.py  test_job_fit.py  test_job_fit_benchmark.py  test_prepare_golden_set.py  test_recalibration.py  test_reporting_insights_compare.py  test_reporting_snapshot.py  test_schema_contract.py  test_scoring_engine.py  test_tuning.py
